Updated auto text

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Snack Roulette</title>
+<title>Protein Roulette</title>
 
 <!-- Share Tech Mono -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -96,13 +96,13 @@
 
     <div class="controls">
       <textarea id="snacksInput" placeholder="Enter snacks, one per line">Chips
-Pocky
-Gummies
-Seaweed
-Chocolate
-Nuts
-Popcorn
-Boba</textarea>
+Chicken Breast
+Meat Stick
+Protein Chips
+Protein Bar
+Treat yo'self!
+Protein Cookie
+Shake Shake Shake</textarea>
 
       <div class="options">
         <label><input type="checkbox" id="noRepeat" checked /> Exclude last result</label>
