--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 </head>
 <body>
   <div class="app">
-    <h1><span class="badge">Snack Roulette</span></h1>
+    <h1><span class="badge">Protein Roulette</span></h1>
 
     <div class="wheel-wrap">
       <div class="pointer"></div>
